--- a/devopsIQ/index.html
+++ b/devopsIQ/index.html
@@ -1,6 +1,6 @@
 <html>
 <title>Jenkins final Website</title>
-<body background="images/2.jpeg">
+<body background="images/2.jpg">
 <p style="color:white">Hello We are from Team13. </p>
 <p style="color:white">M V kalyan babu Bharath Umesh Mokshith </p>
 </body>
